--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 click==8.0.1
-Flask==2.0.1
+Flask==2.2.2
 Flask-PyMongo==2.3.0
+importlib-metadata==4.12.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
-MarkupSafe==2.0.1
+MarkupSafe==2.1.1
 Pillow==8.3.1
 PyJWT==2.1.0
 pymongo==3.12.0
 python-dotenv==0.19.2
-Werkzeug==2.0.1
+Werkzeug==2.2.2
+zipp==3.8.1
